# redshiftctl

./: Cargo.toml  LICENSE.md  README.md  install.sh
src/: main.rs
