[package]
name = "redshiftctl"
description = "A simple program to control redshift automatically"
license = "MIT"
authors = ["Jeremy Reed <reeje76@gmail.com>",]
repository = "https://github.com/jeremymreed/redshiftctl"
version = "2.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
